version/0.25/_sources/api/solver/_autosummary/settings/flow_direction.rst.txt
:orphan:

.. _flow_direction:

flow_direction
==============

.. autoclass:: ansys.fluent.core.generated.solver.settings_242.flow_direction.flow_direction
    :show-inheritance:

.. rubric:: Methods

========================================   ==========================================

Method                                                                        Summary

========================================   ==========================================
:ref:`list_properties <list_properties>`          List properties of selected object.

:ref:`resize <resize>`                         Set number of objects for list-object.

========================================   ==========================================

.. rubric:: Named object type

:ref:`reference_frame_velocity_child <reference_frame_velocity_child>`


.. rubric:: Included in:

================================================   =======================

Parent                                                             Summary

================================================   =======================
:ref:`momentum <momentum>`                             Help not available.

:ref:`momentum <momentum_1>`                           Help not available.

:ref:`momentum <momentum_2>`                           Help not available.

:ref:`momentum <momentum_3>`                           Help not available.

:ref:`momentum <momentum_6>`                           Help not available.

:ref:`momentum <momentum_7>`                           Help not available.

:ref:`momentum <momentum_8>`                           Help not available.

:ref:`momentum <momentum_9>`                           Help not available.

:ref:`recirculation_inlet <recirculation_inlet>`       Help not available.

:ref:`momentum <momentum_10>`                          Help not available.

================================================   =======================

