version/0.27/_sources/api/solver/_autosummary/settings/flow_direction.rst.txt
:orphan:

.. _flow_direction:

flow_direction
==============

.. autoclass:: ansys.fluent.core.generated.solver.settings_251.flow_direction
    :show-inheritance:

.. rubric:: Methods

==========================================   ==========================================

Method                                                                          Summary

==========================================   ==========================================
:ref:`list_properties <list_properties_1>`          List properties of selected object.

:ref:`resize <resize>`                           Set number of objects for list-object.

==========================================   ==========================================

.. rubric:: Named object type

:ref:`flow_direction_child <flow_direction_child>`


.. rubric:: Included in:

====================================================   =====================================================================

Parent                                                                                                               Summary

====================================================   =====================================================================
:ref:`momentum <momentum>`                                            Allows to change momentum model variables or settings.

:ref:`momentum_1 <momentum_1>`                                        Allows to change momentum model variables or settings.

:ref:`momentum_2 <momentum_2>`                                        Allows to change momentum model variables or settings.

:ref:`momentum_3 <momentum_3>`                                        Allows to change momentum model variables or settings.

:ref:`momentum_6 <momentum_6>`                                        Allows to change momentum model variables or settings.

:ref:`momentum_7 <momentum_7>`                                        Allows to change momentum model variables or settings.

:ref:`momentum_8 <momentum_8>`                                        Allows to change momentum model variables or settings.

:ref:`momentum_9 <momentum_9>`                                        Allows to change momentum model variables or settings.

:ref:`recirculation_inlet_1 <recirculation_inlet_1>`       Allows to change recirculation-inlet model variables or settings.

:ref:`momentum_10 <momentum_10>`                                      Allows to change momentum model variables or settings.

====================================================   =====================================================================

